# sample_server

./: Dockerfile  LICENSE  README.rst  pyproject.toml
.github/workflows/: build-image.yaml
sample_server/: app.py  config.toml
sample_server/static/: index.html
