[project]
name = "sample_server"
authors = [
    {name = "Jacky Chen", email="jacky9813@hotmail.com"}
]
description = "A test web server with WebSocket."
readme = {file="README.rst", content-type = "text/x-rst"}
license = {text = "MIT License"}
version = "0.1.0"
requires-python = ">= 3.8"
dependencies = [
    "Flask >= 3.0.2",
    "Flask-SocketIO >= 5.3.6"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]


[build-system]
requires = ["setuptools[toml]>=65.0"]
build-backend = "setuptools.build_meta"
